--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -98,3 +98,15 @@ a {
 		}
 	}
 }
+
+.el-card {
+	.el-card__header {
+		padding: 8px 20px;
+		.thead {
+			position: relative;
+			h2 {
+				font-weight: normal;
+			}
+		}
+	}
+}
